<package>
  <name>rviz_graffiti_plugin</name>
  <version>0.1.0</version>
  <description>!!!
  </description>
  <maintainer email="mcharikov@ugcs.com">Mike Charikov</maintainer>
  <license>BSD</license>

  <author>Mike Charikov</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
