<?xml version="1.0"?>
<package>
  <name>sf11_node</name>
  <version>0.0.1</version>
  <description>The sf11_node package provides a driver for the sf10 laser range finder. </description>

  
  <maintainer email="mcharikov@ugcs.com">Mike Charikov (SPH Engineering)</maintainer>

  <!--<url type="website">http://ros.org/wiki/sf31_node</url> -->

  <author>
          Guilherme Pereira (The AIR lab, Carnegie Mellon University) (for sf30)
          Mike Charikov (SPH Engineering) for sf11
   </author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>